<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
    <TextView
        android:text="@string/player"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <TextView
        android:text="@string/level"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/table_kills"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/table_deaths"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/table_assists"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/gold"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/table_last_hits"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/table_denies"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/table_xpm"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/table_gpm"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/table_hero_damage"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/table_hero_healing"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:text="@string/table_tower_damage"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>
</TableRow>